@@ -1,12 +1,17 @@
 package com.example.novaledger.auth.jwt;
 
+import com.example.novaledger.auth.service.RedisBlacklistService;
+import com.example.novaledger.common.security.AuthenticatedUserPrincipal;
 import com.example.novaledger.common.tenant.TenantContext;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.http.MediaType;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
@@ -14,12 +19,15 @@ import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.List;
+import java.util.stream.Collectors;
 
+@Slf4j
 @Component
 @RequiredArgsConstructor
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
     private final JwtTokenProvider jwtTokenProvider;
+    private final RedisBlacklistService redisBlacklistService;
 
     @Override
     protected void doFilterInternal(HttpServletRequest request,
@@ -30,25 +38,32 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
             String token = resolveToken(request);
 
             if (token != null && jwtTokenProvider.validateToken(token)) {
+                String jti = jwtTokenProvider.getJti(token);
+
+                if (redisBlacklistService.isBlacklisted(jti)) {
+                    log.warn("Blacklisted JWT detected, jti={}", jti);
+                    writeUnauthorizedResponse(response, "JWT token has been logged out");
+                    return;
+                }
+
                 Long userId = jwtTokenProvider.getUserId(token);
-                Long tenantId = jwtTokenProvider.getTenantId(token);
                 List<String> roles = jwtTokenProvider.getRoles(token);
 
-                TenantContext.setTenantId(tenantId);
+                AuthenticatedUserPrincipal principal = new AuthenticatedUserPrincipal(userId, roles, jti);
 
-                List<SimpleGrantedAuthority> authorities = roles.stream()
+                List<GrantedAuthority> authorities = roles.stream()
                         .map(SimpleGrantedAuthority::new)
-                        .toList();
+                        .collect(Collectors.toList());
 
                 UsernamePasswordAuthenticationToken authentication =
-                        new UsernamePasswordAuthenticationToken(userId, null, authorities);
+                        new UsernamePasswordAuthenticationToken(principal, null, authorities);
 
                 SecurityContextHolder.getContext().setAuthentication(authentication);
             }
 
-            filterChain.doFilter(request, response);  // ← 移進來
+            filterChain.doFilter(request, response);
         } finally {
-            TenantContext.clear();  // ← request 結束後才清
+            TenantContext.clear();
         }
     }
 
@@ -58,5 +73,18 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
             return bearer.substring(7);
         }
         return null;
+    }
+
+    private void writeUnauthorizedResponse(HttpServletResponse response, String message) throws IOException {
+        response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+        response.setContentType(MediaType.APPLICATION_JSON_VALUE);
+        response.setCharacterEncoding("UTF-8");
+
+        String body = String.format(
+                "{\"success\":false,\"code\":\"JWT_BLACKLISTED\",\"message\":\"%s\"}",
+                message
+        );
+
+        response.getWriter().write(body);
     }
 }
